objects/DLObj1__c.object
<CustomObject>
    <description>ad</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DLObj1</label>
    <nameField>
        <label>DLObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DLObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>